--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "core-js": "^3.3.2",
-    "vue": "^2.6.10",
+    "jquery": "^3.4.1",
     "vee-validate": "^2.2.13",
+    "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.1"
   },
