--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ VUE_APP_DEBUG=true
 VUE_APP_CLIENT_ID=2
 VUE_APP_CLIENT_SECRET="secret-key"
 VUE_APP_API_DOMAIN="http://localhost:8000"
+VUE_APP_API_URL="http://jsonplaceholder.typicode.com"
