--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^3.3.2",
     "jquery": "^3.4.1",
+    "popper.js": "^1.16.0",
     "vee-validate": "^2.2.13",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
